[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quantum-trader"
version = "1.0.0"
description = "Fully automated quantum trading system on Hyperliquid with ML and Gemini AI orchestration"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["trading", "hyperliquid", "machine-learning", "gemini", "automated"]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "xgboost>=2.0,<3.0",
    "joblib>=1.3",
    "google-generativeai>=0.5,<1.0",
    "requests>=2.31,<3.0",
    "eth-account>=0.10,<1.0",
    "websocket-client>=1.7,<2.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
deep-learning = ["tensorflow>=2.14,<3.0"]
dev = ["pytest>=7.4,<9.0", "pytest-mock>=3.12,<4.0", "ruff>=0.3"]
datasets = ["safetensors>=0.4.2,<1.0"]

[project.scripts]
quantum-trader = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
